--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,3 +52,40 @@ body {
   overflow: auto;
   object-fit: contain; /* Ensure the image maintains its aspect ratio */
 }
+
+.reef-button {
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 15px; /* This will give you rounded corners */
+  padding: 10px 20px; /* Adjust the padding to your preference */
+  cursor: pointer;
+  font-weight: bold;
+  outline: none;
+  transition: background-color 0.3s, color 0.3s; /* Smooth transition for hover effect */
+}
+
+.reef-button:hover {
+  background-color: black; /* Color when hovered */
+  color: white; /* Text color when hovered */
+}
+
+
+
+.fullscreen-bg {
+  /* Use a placeholder image URL or replace with the actual image you want to use */
+  background: url('https://r2.erweima.ai/midjourney/1713864574_24953fcb5b334147936fdead86a911fb.png') no-repeat center center fixed; 
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  position: fixed; /* Fix the background in place */
+  top: 0;
+  left: 0;
+  z-index: -1; /* Ensure the background is behind all content */
+}
+
+.content-container {
+  position: relative; /* Position relative to the fixed background */
+  z-index: 1; /* Higher z-index to overlay content on the background */
+  /* Rest of your styles */
+}
